--- a/src/sass/_grid.scss
+++ b/src/sass/_grid.scss
@@ -203,14 +203,14 @@
 	display: -ms-inline-flexbox;
 	display: -ms-flexbox;	
 	display: flex;
-  // -webkit-flex-flow: row wrap;
-	// -ms-flex-flow: row wrap;
-	// flex-flow: row wrap;
-	// -webkit-flex-wrap: wrap;
-	// -ms-flex-wrap: wrap;
-  // flex-wrap: wrap;
+  -webkit-flex-flow: row wrap;
+	-ms-flex-flow: row wrap;
+	flex-flow: row wrap;
+	-webkit-flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
+  flex-wrap: wrap;
   margin-left: -$col_gutter;
-  margin-right: -$col_gutter;
+  margin-right: -$col_gutter; 
 
   &-no-margin {
     margin-left: 0;
