--- a/src/sass/_ui.scss
+++ b/src/sass/_ui.scss
@@ -131,7 +131,7 @@ a {
 b, strong {
 	font-weight: 700;
 }
-img {
+.wrapper img {
 	max-width: 100%;
 	height: auto;
 }
@@ -141,6 +141,16 @@ img {
 	display: block;
 	line-height: 0;
 	font-size: 0;
+}
+
+.section-title {
+	text-align: center;
+	margin-bottom: 60px;
+	@include fz($h3);
+	line-height: 145.938%;
+	text-transform: uppercase;
+	font-weight: 600;
+	letter-spacing: 0.96px;
 }
 /*---- ICONS ---- */
 
@@ -175,6 +185,33 @@ img {
 	background-color: $bgc_light;
 }
 
+.ui-more {
+	@include fz(16);
+	@include ls(0.64);
+	text-transform: uppercase;		
+	color: $primary;	
+	width: max-content;
+	transition: color 0.5s;
+	&:hover {
+		color: $hover_btn;		
+		svg {			
+			path {
+				stroke: $hover_btn;
+			}				
+		}
+	}
+	svg {		
+		margin-right: 4px;
+		path {
+			transition: stroke 0.5s;
+		}
+	}	
+	&.right {
+		display: block;
+		margin-left: auto;
+	}
+}
+
 .ui-btn {	
 	display: inline-block;
 	vertical-align: middle;
@@ -197,7 +234,7 @@ img {
 	@include fz(18);	
 	font-weight: 500;
 	cursor: pointer;
-	transition: all 0.5s ease-in-out;
+	// transition: background 0.5s ease-in-out;
 	text-transform: uppercase;
 	user-select: none;
 
@@ -211,22 +248,7 @@ img {
 		path {
 			transition: all 0.5s;
 		}
-	}
-	@media (max-width: 1680px) {
-		height: 50px;
-		line-height: 50px;
-		@include fz(15);
-	}
-	@media (max-width: 960px) {
-		height: 46px;
-		line-height: 46px;
-		@include fz(13);
-	}
-	@media (max-width: 599px) {
-		height: 50px;
-		line-height: 50px;
-		@include fz(15);
-	}
+	}	
 
 	&.ui-btn-small {
 		height: 41px;
@@ -284,14 +306,13 @@ img {
 		}
 
 		&:hover {
-			transition: all 0.5s;
+			transition: background 0.5s, color 0.5s;
 			background: $pink_btn;
 			color: #FFF
 		}
 	}
 
-	&:hover {
-		box-shadow: none;	
+	&:hover {		
 		background: $footer;
 	}
 	// &:active {		
@@ -310,7 +331,7 @@ img {
 	// display: flex;
 	// align-items: center;	
 	display: inline-block;
-	width: 400px;
+	// width: 400px;
 	
 	label.error {
 		@include fz(12);
