--- a/src/sass/_ui.scss
+++ b/src/sass/_ui.scss
@@ -143,14 +143,19 @@ b, strong {
 	font-size: 0;
 }
 
-.section-title {
-	text-align: center;
-	margin-bottom: 60px;
-	@include fz($h3);
-	line-height: 145.938%;
-	text-transform: uppercase;
-	font-weight: 600;
-	letter-spacing: 0.96px;
+.section {
+	padding-top: 80px;
+	padding-bottom: 80px;
+
+	&-title {
+		text-align: center;
+		margin-bottom: 60px;
+		@include fz($h3);
+		line-height: 145.938%;
+		text-transform: uppercase;
+		font-weight: 600;
+		letter-spacing: 0.96px;
+	}
 }
 /*---- ICONS ---- */
 
@@ -298,15 +303,14 @@ b, strong {
 		background: #FFF;
 		color: $gray_dark;
 		letter-spacing: 0.6px;
-		transition: all 0.5s;
+		// transition: background 0.5s, color 0.5s;	
 
 		&.active {
 			background: $pink_btn;
 			color: #FFF;
 		}
 
-		&:hover {
-			transition: background 0.5s, color 0.5s;
+		&:hover {			
 			background: $pink_btn;
 			color: #FFF
 		}
