--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -4,7 +4,7 @@ $bgc_light: #F0FBFD;
 $bgc_pink: #BD5B9E;
 $footer: #4C4D6E;
 $font: #222340;
-$link: #51647B;
+// $link: #51647B;
 $primary: #319DAC;
 $error: #BD5B9E;
 $gray_dark: #343544;
