--- a/src/css/style.css
+++ b/src/css/style.css
@@ -565,7 +565,7 @@ h6, .h6, .ui-h5 {
 }
 
 a {
-  color: #51647B;
+  color: #222340;
   text-decoration: none;
   outline: none;
   -webkit-transition: color 0.5s, border 0.5s;
@@ -587,6 +587,10 @@ b, strong {
   display: block;
   line-height: 0;
   font-size: 0;
+}
+
+.ui-centered {
+  text-align: center;
 }
 
 .section {
@@ -4024,14 +4028,14 @@ b, strong {
   margin-bottom: 0;
 }
 
-.description-slider-item {
+.description-slide-item {
   height: 341px;
   border-radius: 12px;
   -webkit-box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
           box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
   overflow: hidden;
 }
-.description-slider-item img {
+.description-slide-item img {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
@@ -4099,10 +4103,8 @@ b, strong {
   max-width: 62%;
 }
 .reviews-card-main {
+  padding-right: 14px;
   color: #343544;
-  font-size: 16px;
-  font-size: 1rem;
-  font-weight: 400;
   line-height: 156.25%;
   letter-spacing: 0.01rem;
   height: 250px;
@@ -4110,14 +4112,6 @@ b, strong {
 }
 .reviews-card-main p {
   margin: 0;
-}
-
-.show-all {
-  text-align: center;
-}
-.show-all .ui-btn {
-  position: relative;
-  z-index: 2;
 }
 
 .feedback {
@@ -4154,7 +4148,7 @@ b, strong {
   width: 25%;
 }
 
-.doctors-page {
+.section-doctors {
   padding-bottom: 20px;
 }
 
@@ -4218,10 +4212,11 @@ b, strong {
 .doctor-card:hover {
   background-color: #CDF3F9;
 }
-.doctor-photo {
+.doctor-card-photo {
   aspect-ratio: 1.25;
+  display: block;
 }
-.doctor-photo img {
+.doctor-card-photo img {
   display: block;
   -o-object-fit: cover;
      object-fit: cover;
@@ -4230,10 +4225,11 @@ b, strong {
   width: 100%;
   height: 100%;
 }
-.doctor-info {
+.doctor-card-info {
   padding: 34px 24px 38px;
 }
-.doctor-name {
+.doctor-card-name {
+  display: block;
   font-weight: 600;
   line-height: 133.333%;
   padding-bottom: 23px;
@@ -4245,33 +4241,20 @@ b, strong {
   line-height: 133.333%;
   text-transform: unset;
 }
-.doctor-name .h4 {
-  margin: 0;
-  font-weight: 600;
-  line-height: 133.333%;
-  text-transform: unset;
-}
-.doctor-speciality {
+.doctor-card-speciality {
   font-size: 18px;
   font-size: 1.125rem;
   color: #343544;
   letter-spacing: 0.03375rem;
   font-weight: 500;
 }
-.doctor-speciality p {
-  margin: 0;
-}
-.doctor-category {
+.doctor-card-category {
   font-size: 18px;
   font-size: 1.125rem;
   color: #343544;
   letter-spacing: 0.03375rem;
   font-weight: 500;
   margin-bottom: 24px;
-}
-.doctor .more {
-  display: block;
-  margin-left: auto;
 }
 .doctor.single .doctor-photo {
   width: 50%;
@@ -5263,8 +5246,8 @@ b, strong {
 }
 
 .slider-four {
-  margin: -32px;
-  padding: 32px;
+  margin: -32px -32px 0;
+  padding: 32px 32px 0;
   position: relative;
 }
 .slider-four::before {
