--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -1,9 +1,9 @@
-.wrapper {
-  // min-height: 100%;
-  display: flex;
-  flex-direction: column;
-  // overflow: hidden;
-}
+// .wrapper {
+//   // min-height: 100%;
+//   display: flex;
+//   flex-direction: column;
+//   // overflow: hidden;
+// }
 
 .header {
   position: fixed;
@@ -13,18 +13,21 @@
   left: 0;
 
   &-top {
-    background-color: $primary;    
+    background-color: $primary;
+
     &-logo {
       width: 220px;
       height: 45px;
       margin-top: auto;
       margin-bottom: auto;
     }
+
     &-wrapper {
       display: flex;
       align-items: center;
       height: 80px;
     }
+
     &-contact {
       display: flex;
       align-items: center;
@@ -32,46 +35,46 @@
       margin-left: auto;
       margin-right: 40px;
       @include fz(18);
-      @include ls(0.72);     
+      @include ls(0.72);      
+    }
 
-      .address {
-        display: flex;
-        align-items: center;
-        gap: 12px;
+    &-address {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      color: #fff;
+      margin-right: 46px;
+    }
+
+    &-phone {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      margin-right: 20px;
+      a {
+        display: inherit;
         color: #fff;
-        margin-right: 46px;
-      }
-
-      .phone {
-        display: flex;
-        align-items: center;
-        gap: 20px;
-        margin-right: 20px;
-        a {
-          display: inherit;
-          color: #fff;
-          &.viber, &.tel {
-            width: 32px;
-            height: 32px;
-          }
-        }
-      }
-
-      .socials {
-        display: flex;
-        align-items: center;
-        a {
+        &.viber, &.tel {
           width: 32px;
           height: 32px;
-          display: inherit;          
         }
+      }
+    }
+
+    &-socials {
+      display: flex;
+      align-items: center;
+      a {
+        width: 32px;
+        height: 32px;
+        display: inherit;          
       }
     }
   }
   &-bottom {
     background-color: $bgc-pink;
     
-    .header-nav {
+    &-nav {
       display: flex;
       align-items: center;
       gap: 60px;
@@ -109,7 +112,20 @@
       .ui-field {
         width: max-content;
         position: relative;
-      }
+      }      
+    }
+
+    &-list {
+      display: none;
+      position: absolute;
+      top: -20px;
+      left: 100%;
+      padding-right: 10px;
+      padding-top: 20px;
+      padding-bottom: 20px;
+      background-color: #fff;
+      border-radius: 12px;     
+      box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
     }
 
     nav > ul > li:nth-child(2) > ul {
@@ -221,10 +237,17 @@
                   margin-left: 16px;
                 }
               }
-  
-              &:hover > ul {
-                display: block;           
+
+              &:hover .header-bottom-list {
+                display: block;                             
+                ul {
+                  display: block;                     
+                }
               }
+  
+              // &:hover > ul {
+              //   display: block;           
+              // }
   
               &:hover {
                 a {
@@ -236,17 +259,23 @@
               }
   
               ul {
-                display: none;                   
-                position: absolute;
-                top: -20px;
-                left: 100%;              
-                min-width: 350px;
-                border-radius: 12px;
-                padding-top: 20px;
-                padding-bottom: 20px;
+                display: none; 
+
+                // position: absolute;
+                // top: -20px;
+                // left: 100%;              
+                // min-width: 350px;               
+                // padding-top: 20px;
+                // padding-bottom: 20px;
+                padding-right: 10px;
+                padding-top: 0;
+                padding-bottom: 0;               
                 max-height: 420px;
-                overflow: auto;
-                li {                       
+                overflow-y: auto;
+                border-radius: 0;
+                box-shadow: none;             
+               
+                li {                               
                   a {                 
                     width: 100%;
                     transition: all 0.5s; 
