--- a/src/sass/_ui.scss
+++ b/src/sass/_ui.scss
@@ -418,6 +418,44 @@ b, strong {
 	}
 }
 
+
+.pagination {
+	text-align: center;
+
+	&-list {
+		display: inline-block;
+		background-color: #FFF;        
+		border-radius: 35px;        
+		box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
+	}
+
+	&-item {
+		display: inline-block;		
+		&-link {
+			color: $gray_dark;
+			text-align: center;
+			@include fz(18);         
+			font-weight: 500;      
+			@include ls(0.72);         
+			display: block;
+			width: 62px;
+			height: 62px;     
+			padding: 20px;
+			border-radius: 50%;
+			transition: all 0.5s;
+			&:hover {
+				background-color: $primary;
+				color: #FFF;
+			}
+			&.active {
+				background-color: $primary;
+				color: #FFF;
+			}
+		}
+	}
+}
+
+
   
 .jq-checkbox {
 	width: 20px;
